Remove white background on IdentityChooser header

Bug: 872291
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I062a4ca293704affc19743191b10ebf2e48864b0
Reviewed-on: https://chromium-review.googlesource.com/1167506
Reviewed-by: Jérôme Lebel <jlebel@chromium.org>
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#581841}
Former-commit-id: 8519a6f7a7e965cd627eee8c83baa322c32c921c